(PC-27725)[PRO] fix: image uploader size on small screen

--- a/pro/src/pages/VenueEdition/VenueEditionHeader.module.scss
+++ b/pro/src/pages/VenueEdition/VenueEditionHeader.module.scss
@@ -21,12 +21,6 @@
   @media (min-width: size.$tablet) {
     align-self: flex-start;
   }
-
-  > button,
-  > img {
-    width: rem.torem(376px) !important;
-    height: rem.torem(232px) !important;
-  }
 }
 
 .venue-details {
